assets/css/style.css
/* imported google fonts */
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200;300;400;500;600;700&display=swap');


/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}



/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* Generic project style */
    color: #3a3a3a;
    font-family: 'Lato', sans-serif;
}
h1, h2, h3 {
    font-family: 'Oswald', sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #252525;
}

.hidden-heading {
    display: none;
}

/* Header */
header {
    background-color: #ffffff;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 2px 2px #3a3a3a;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

#menu > li {
    margin-bottom: 1em;
}

.active {
    border-bottom: 1px solid #3a3a3a;
}

#menu {
    font-size: 110%;
    letter-spacing: 4px;
    list-style-type: none;
}

header a {
    text-decoration: none;
    color: inherit;
}


/* Main Content */
main {
    /* Make main element take up any surplus space to push footer down */
    flex: 1 0 auto;
    margin-top: 47px;

}
/* Hero image */

#hero {
    height: 600px;
    width: 100%;
    background: url("../images/hero-image.webp") no-repeat center center/cover;
    position: relative;
}

#times {
    background: url('../images/dublin-city.webp') no-repeat center/cover;
    display: flex;
    flex-wrap: wrap;
}
#times div {
    color: #fafafa;
    background-color: rgba(0, 0, 0, .6);
    padding: 15px;
    text-align: center;
    flex-basis: 200px;
    flex-grow: 1;
    border: 2px solid white;
}
#times h3 {
    color: #fafafa;
}

#circle-cover-bg {
    background: url('../images/reasons-image.webp') no-repeat top center / cover;
    height: 90vw;
    width: 90vw;
    margin-bottom: 20px;
    border-radius: 50%;
    max-width: 300px;
    max-height: 300px;
}
#benefits-image {
    display: flex;
    align-items: center;
    justify-content: center;
}

#cover-text {
    background-color: rgba(241, 109, 107, .7);
    font-size: 130%;
    position: absolute;
    bottom: 30px;
    width: 80%;
    min-height: 200px;
    padding-top: 40px;
    padding-left: 10px;
}
#cover-text > h2, #cover-text > h3 {
    color: #ffffff;
}
/* Gallery Page */
#photos img {
    width: 100%;
    line-height: 1em;
}
#photos {
    line-height: 0;
}

/* Footer */
#social-network {
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}
#social-network i {
    font-size: 160%;
    padding: 5%;
    color: #3a3a3a;
}

/* navbar styles */
nav {
    position: absolute;
    background-color: #ffffff;
    width: 100%;
    left: 0;
    padding: 0 1rem;
    box-shadow: 0 2px 2px #3a3a3a;
    display: none;
    top: 100%;

}

/* Nav toggle */
#nav-toggle:checked~nav {
    display: block;
}
#nav-toggle {
    display: none;
}
.nav-toggle-label {
    font-size: 2rem;
}

/* Media iPad 768px */
@media screen and (min-width: 768px) {

    /* Header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 1rem;
    }
    #menu {
        display: flex;
    }
    #menu > li {
        padding-left: 1rem;
    }
    .nav-toggle-label {
        display: none;
    }
    #logo {
        font-size: 200%;
        line-height: 75px;
        margin: 0 0.5rem;
    }
    main {
        margin-top: 79px;
    }
    #cover-text {
        width: 300px;
        right: 50px;
    }
    /* reasaons section */
    #benefits-physical,
    #benefits-mental {
        display: flex;
        flex-direction: column;
        width: 100%;
    }
    #benefits-physical > div,
    #benefits-mental > div {
        width: 75%;
    }
    #benefits-mental {
        text-align: end;
        align-self: flex-end;
    }
}

@media screen and (min-width: 992px) {
    #menu a:hover {
        border-bottom: 1px solid #3a3a3a;
    }

    
}

/* Media Q for screens over 1200px */

@media screen and (min-width: 1200px) {
    #benefits {
        display: flex;
        flex-direction: row;
    }
    #benefits > div  {
        flex: 1;
    }
    #benefits-image {
        order: 0;
    }
    #benefits-mental {
        order: 1;
    }
    #benefits-mental > div {
        align-self: flex-start;
    }
    #benefits-physical > div {
        align-self: flex-end;
    }
}

